FIX: Collapse movement, textarea, general style alignment (#68)
* bugfix

* bugfix

* bugfix

* fix body of null

* remove only from test

* fix??

* Update packages/api-explorer/src/JsonForm/configureJsonEditor.js

--- a/packages/api-explorer/src/JsonForm/custom-bootstrap4.css
+++ b/packages/api-explorer/src/JsonForm/custom-bootstrap4.css
@@ -9,11 +9,108 @@
     margin: 5px;
 }
 
-.card-title label {
+.mia-container-wrapper.mia-container-wrapper {
+    border: 0;
+    padding: 0;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    grid-template-rows: 40px 1fr;
+    grid-template-areas: 'card-title btn-group'
+                         'card-body card-body'
+                         'actions actions';
+    align-items: center;
+}
+
+.mia-container-wrapper .card-title {
+    grid-area: card-title;
+    height: 100%;
+    display: flex !important;
+    align-items: center;
+    background: white;
+    border-top-left-radius: 4px;
+    border-top: 1px solid #d8d8d8;
+    border-left: 1px solid #d8d8d8;
+    margin: 0;
+    min-width: 0;
+}
+
+.mia-container-wrapper .card-title .ant-btn-sm {
+    grid-area: card-title;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: rgba(0, 0, 0, 0.65);
+    margin: 0 !important;
+    border: 0;
+    width: 24px;
+    height: 24px;
+    background-color: transparent;
+}
+
+.mia-container-wrapper .btn-group:last-child {
+    grid-area: actions !important;
+}
+.mia-container-wrapper .btn-group {
+    grid-area: btn-group;
+    margin: 0 !important;
+    display: flex !important;
+    align-items: center;
+    height: 100%;
+    background: white;
+    border-top-right-radius: 4px;
+    border-top: 1px solid #d8d8d8;
+    border-right: 1px solid #d8d8d8;
+}
+[data-theme="antdTheme"] > .mia-container-wrapper {
+    position: relative;
+}
+
+[data-theme="antdTheme"] > .mia-container-wrapper:after {
+    content: '';
+    bottom: -16px;
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background: #d8d8d8;
+}
+
+/*[data-theme="antdTheme"] > .mia-container-wrapper > .card-body {*/
+/*    margin-top: 32px;*/
+/*}*/
+
+[data-theme="antdTheme"] > .mia-container-wrapper > .card-title,
+[data-theme="antdTheme"] > .mia-container-wrapper > .btn-group {
+    border: 0;
+}
+
+.mia-container-wrapper .btn-group textarea {
+    margin: 0 !important;
+}
+.mia-container-wrapper .btn-group .json-editor-btntype-copy,
+.mia-container-wrapper .btn-group .json-editor-btntype-cancel,
+.mia-container-wrapper .btn-group .json-editor-btntype-save {
+    margin: 4px 4px 0 0
+}
+
+.mia-container-wrapper .card-title label {
     font-size: 18px;
+    line-height: 25px;
     color: #666666;
     text-transform: uppercase;
     font-weight: bold;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    margin: 0;
+    flex: 1;
+}
+
+.mia-container-wrapper .card-body {
+    grid-area: card-body;
+}
+
+.mia-container-wrapper > .card-body .row > div {
+
 }
 
 .form-group {
@@ -42,7 +139,7 @@
 }
 
 .mia-container-wrapper.card {
-    display: block;
+    /*display: block;*/
 }
 
 .mia-container-wrapper .btn-group {
@@ -56,6 +153,9 @@
 
 /** general */
 
-* {
-    outline: none;
+.mia-container-wrapper *,
+.mia-container-wrapper *:active,
+.mia-container-wrapper *:focus {
+  outline: none !important;
 }
+
